# DeepSDF

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INFERENCE_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
deepsdf/: __init__.py
deepsdf/configs/: default_config.yaml  low_memory_config.yaml  ultra_low_memory_config.yaml
deepsdf/data/: __init__.py  dataset.py  sdf_sampling.py
deepsdf/inference/: __init__.py  reconstructor.py
deepsdf/models/: __init__.py  decoder.py  loss.py
deepsdf/training/: __init__.py  trainer.py
deepsdf/utils/: __init__.py  config.py  visualization.py
docs/: API.md  INFERENCE.md  MEMORY_CONFIG.md  NAN_FIX.md  QUICKSTART.md  TRAINING.md  VISUALIZATION.md  VISUALIZATION_UTILS.md
examples/: create_splits.py  prepare_data.py  reconstruct.py  train.py  view_mesh.py  visualize_reconstructions.py  visualize_simple.py
tests/: test_config.py  test_data.py  test_decoder.py  test_loss.py
